Security fixes and production readiness improvements
- Remove hardcoded secrets from docker-compose.yml
- Update .env.example with all required production variables
- Add comprehensive production deployment instructions to README
- Confirm license enforcement is properly implemented
- Add screenshots section to README for future documentation
- Ensure frontend dependency locking with package-lock.json
- Prepare for v1.0.0 release

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ DATABASE_URL=sqlite:///trading_bot.db
 # REDIS CONFIGURATION
 # =============================================================================
 REDIS_URL=redis://localhost:6379/0
-REDIS_PASSWORD=
+REDIS_PASSWORD=your-redis-password-change-in-production
 REDIS_DB=0
 
 # =============================================================================
@@ -248,6 +248,22 @@ ALERT_TELEGRAM_ENABLED=False
 # Production Redis (with password)
 # REDIS_URL=redis://:password@localhost:6379/0
 # REDIS_PASSWORD=your_redis_password
+
+# =============================================================================
+# DOCKER COMPOSE PRODUCTION VARIABLES
+# =============================================================================
+# Database credentials for PostgreSQL container
+POSTGRES_DB=tradingbot_prod
+POSTGRES_USER=tradingbot
+POSTGRES_PASSWORD=your-strong-postgres-password-change-in-production
+
+# Grafana admin credentials
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=your-strong-grafana-password-change-in-production
+
+# pgAdmin credentials
+PGADMIN_DEFAULT_EMAIL=admin@tradingbot.com
+PGADMIN_DEFAULT_PASSWORD=your-strong-pgadmin-password-change-in-production
 
 # =============================================================================
 # DEVELOPMENT NOTES
